--- a/src/main/resources/templates/usuario/cadastrarUsuarios.html
+++ b/src/main/resources/templates/usuario/cadastrarUsuarios.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Livros</title>
+	<title>Usuários</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -12,34 +12,37 @@
 
 <body>
 	<div class="container">
-		<h1 class="display-4 mt-5">Cadastrando livro</h1>
-		<form action="#" th:action="@{/livro/cadastrar}" th:object="${livro}" method="post">
+		<h1 class="display-4 mt-5">Cadastrando Usuário</h1>
+		<form action="#" th:action="@{/usuario/cadastrar}" th:object="${usuario}" method="post">
 			<div class="alert alert-success alert-dismissible fade show" role="alert" th:attr="hidden=${#strings.isEmpty(mensagem)}">
 				<span th:text="${mensagem}">Salvo com sucesso!</span>
 				<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 			</div>
-			<div class="alert alert-danger alert-dismissible fade show" role="alert" th:attr="hidden=${#strings.isEmpty(erro)}">
-				<span th:text="${erro}"></span>
-				<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-			</div>
-			<input type="hidden" th:field="*{id}" th:value="${livro.id}" class="form-control" id="id" />
+			<input type="hidden" th:field="*{id}" th:value="${usuario.id}" class="form-control" id="id" />
 			<div class="mb-3 row">
 				<div class="col-12">
-					<label for="titulo">Titulo</label>
-					<input type="text" th:field="*{titulo}" th:value="${livro.titulo}" class="form-control" id="titulo" />
+					<label for="titulo">Nome</label>
+					<input type="text" th:field="*{nome}" th:value="${usuario.nome}" class="form-control" id="nome" />
 				</div>
 			</div>
 			<div class="mb-3 row">
 				<div class="col-6">
-					<label for="autor">Autor</label>
-					<input type="text" th:field="*{autor}" th:value="${livro.autor}" class="form-control" id="autor" />
+					<label for="correioEletronico">Correio Eletrônico</label>
+					<input type="text" th:field="*{correioEletronico}" th:value="${usuario.correioEletronico}" class="form-control" id="correioEletronico" />
 				</div>
 				<div class="col-2">
-					<label for="anoDePublicacao">Ano de Publicação</label>
-					<input type="number" th:field="*{anoDePublicacao}" th:value="${livro.anoDePublicacao}" class="form-control" id="anoDePublicacao" />
+					<label for="telefone">Telefone</label>
+					<input type="number" th:field="*{telefone}" th:value="${usuario.telefone}" class="form-control" id="telefone" />
 				</div>
-				<div class="col-4 d-grid">
-					<button type="submit" class="mt-4 btn btn-primary">Cadastrar Livro</button>
+				<div class="col-2">
+					<label for="senha">Senha</label>
+					<input type="text" th:field="*{senha}" th:value="${usuario.senha}" class="form-control" id="senha" />
+				</div>
+				
+			</div>
+			<div class="mb-3 row">
+				<div class="col-12 d-grid">
+					<button type="submit" class="mt-4 btn btn-primary">Cadastrar Usuario</button>
 				</div>
 			</div>
 		</form>
