--- a/src/main/resources/templates/livro/cadastrarLivros.html
+++ b/src/main/resources/templates/livro/cadastrarLivros.html
@@ -13,6 +13,7 @@
 <body>
 	<div class="container">
 		<h1 class="display-4 mt-5">Cadastrando livro</h1>
+		<a class="btn btn-light" href="/livro" role="button">Listar</a>
 		<form action="#" th:action="@{/livro/cadastrar}" th:object="${livro}" method="post">
 			<div class="alert alert-success alert-dismissible fade show" role="alert" th:attr="hidden=${#strings.isEmpty(mensagem)}">
 				<span th:text="${mensagem}">Salvo com sucesso!</span>
