--- a/src/main/resources/templates/usuario/listarUsuarios.html
+++ b/src/main/resources/templates/usuario/listarUsuarios.html
@@ -13,6 +13,14 @@
 <body>
 	<div class="container">
 		<h1 class="display-4 mt-5">Usuários cadastrados</h1>
+		<div class="row">
+			<div class="col-6 d-grid gap-2 d-md-flex">		
+		<a class="btn btn-light" href="/usuario/cadastrar" role="button">Cadastrar</a>
+			</div>
+			<div class="col-6 d-grid gap-2 d-md-flex justify-content-md-end">
+			    <a class="btn btn-primary" href="/livro"  role="button">Livros</a>
+			</div>
+		</div>
 		<table class="table">
 			<thead>
 				<tr>
