--- a/src/main/resources/templates/usuario/cadastrarUsuarios.html
+++ b/src/main/resources/templates/usuario/cadastrarUsuarios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -27,7 +27,7 @@
 			<input type="hidden" th:field="*{id}" th:value="${usuario.id}" class="form-control" id="id" />
 			<div class="mb-3 row">
 				<div class="col-12">
-					<label for="titulo">Nome</label>
+					<label for="nome">Nome</label>
 					<input type="text" th:field="*{nome}" th:value="${usuario.nome}" class="form-control" id="nome" />
 				</div>
 			</div>
