--- a/src/main/resources/templates/erro.html
+++ b/src/main/resources/templates/erro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -12,9 +12,10 @@
 
 <body>
 	<div class="container">
-		<h1 class="display-3 mt-5">Algo deu errado :( (provavelmente culpa sua)</h1>
+		<h1 class="display-3 mt-5">Algo deu errado :(</h1>
 		<h1 class="display-6 mt-5" th:text="${erro}"></h1>
 		<button class="btn btn-light" th:attr="onclick=|voltar()|">Voltar</button>
+	</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
