--- a/src/main/resources/templates/usuario/listarUsuarios.html
+++ b/src/main/resources/templates/usuario/listarUsuarios.html
@@ -19,6 +19,7 @@
 			</div>
 			<div class="col-6 d-grid gap-2 d-md-flex justify-content-md-end">
 			    <a class="btn btn-primary" href="/livro"  role="button">Livros</a>
+				<a class="btn btn-DANGER" href="/logout" role="button">SAIR</a>
 			</div>
 		</div>
 		<table class="table">
