--- a/src/main/resources/templates/emprestimo/listarEmprestimos.html
+++ b/src/main/resources/templates/emprestimo/listarEmprestimos.html
@@ -25,6 +25,7 @@
 			<div class="col-6 d-grid gap-2 d-md-flex justify-content-md-end">
 			    <a class="btn btn-primary" href="/livro" role="button">Livros</a>
 			    <a class="btn btn-primary" href="/usuario"  role="button">Usuarios</a>
+				<a class="btn btn-DANGER" href="/logout" role="button">SAIR</a>
 			</div>
 		</div>
 		<table class="table">
