--- a/src/main/resources/templates/registrarUsuario.html
+++ b/src/main/resources/templates/registrarUsuario.html
@@ -14,8 +14,7 @@
 	<div class="container">
 		<h1 class="display-4 mt-5">Cadastrando Usuário</h1>
 
-		<a class="btn btn-light" href="/usuario" role="button">Listar</a>
-		<form action="#" th:action="@{/usuario/cadastrar}" th:object="${usuario}" method="post">
+		<form action="#" th:action="@{/novo/cadastrar}" th:object="${usuario}" method="post">
 			<div class="alert alert-success alert-dismissible fade show" role="alert"
 				th:attr="hidden=${#strings.isEmpty(mensagem)}">
 				<span th:text="${mensagem}">Salvo com sucesso!</span>
@@ -27,38 +26,43 @@
 				<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 			</div>
 			<input type="hidden" th:field="*{id}" th:value="${usuario.id}" class="form-control" id="id" />
-			<div class="mb-3 row">
+			<div class="mb-3 row justify-content-center justify-content-center">
 				<div class="col-4 align-self-center">
 					<label for="nome">Nome</label>
 					<input type="text" th:field="*{nome}" th:value="${usuario.nome}" class="form-control" id="nome" />
 				</div>
 			</div>
-			<div class="mb-3 row">
+			<div class="mb-3 row justify-content-center">
 				<div class="col-4 align-self-center">
 					<label for="correioEletronico">Correio Eletrônico</label>
 					<input type="text" th:field="*{correioEletronico}" th:value="${usuario.correioEletronico}"
 						class="form-control" id="correioEletronico" />
 				</div>
 			</div>
-			<div class="mb-3 row">
+			<div class="mb-3 row justify-content-center">
 				<div class="col-4 align-self-center">
 					<label for="telefone">Telefone</label>
 					<input type="number" th:field="*{telefone}" th:value="${usuario.telefone}" class="form-control"
 						id="telefone" />
 				</div>
 			</div>
-			<div class="mb-3 row">
+			<div class="mb-3 row justify-content-center">
 				<div class="col-4 align-self-center">
 					<label for="senha">Senha</label>
 					<input type="text" th:field="*{senha}" class="form-control" id="senha" />
 				</div>
 			</div>
-			<div class="mb-3 row">
+			<div class="mb-3 row justify-content-center">
 				<div class="col-4 d-grid align-self-center">
 					<button type="submit" class="mt-4 btn btn-primary">Cadastrar Usuario</button>
 				</div>
 			</div>
 		</form>
+		<div class="mb-3 row justify-content-center">
+			<div class="col-4 d-grid align-self-center">
+				<a type="submit" href="/login" class="mt-4 btn btn-primary">Login</a>
+			</div>
+		</div>
 	</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
